--- a/.env
+++ b/.env
@@ -1,135 +1,101 @@
-# .env file - Fixed Hybrid GPU+CPU Configuration (7.5GB VRAM + CPU RAM)
+# CORRECTED .env - Consistent Memory Management Settings
 # =============================================================================
-# 🔧 CONFIGURE ME - CHANGE THESE SETTINGS BEFORE DEPLOYMENT
-# =============================================================================
+
 # 🔐 JWT CONFIGURATION
-# =============================================================================
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32-chars
 
-# You can generate a secure secret with:
-# openssl rand -base64 32
-
-# Domain Configuration (REQUIRED TO CHANGE)
+# Domain Configuration
 ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk
 
-# Admin User Configuration (REQUIRED TO CHANGE)
+# Admin User Configuration
 ADMIN_USERNAME=admin1
 ADMIN_PASSWORD=admin1
 ADMIN_USER_ID=admin
 
-# Model Configuration - KEEP DEVSTRAL 24B
+# =============================================================================
+# 🤖 MODEL CONFIGURATION
+# =============================================================================
 OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
-MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters) - Hybrid GPU+CPU Mode
-
-# CRITICAL: Hybrid GPU+CPU Configuration for 7.5GB VRAM limit
-OLLAMA_GPU_LAYERS=10                     # ~7.5GB VRAM (20 out of 40 layers)
-OLLAMA_CONTEXT_SIZE=2048                 # Larger context for better performance
-OLLAMA_BATCH_SIZE=128                    # Optimal batch size for hybrid
-OLLAMA_NUM_THREAD=8                      # More CPU threads for CPU layers
-
-# Memory Management - CRITICAL for hybrid mode
-OLLAMA_MLOCK=1                           # Lock GPU layers in VRAM
-OLLAMA_MMAP=0                            # Disable MMAP for better control
-OLLAMA_KEEP_ALIVE=-1                     # Keep model loaded permanently
-OLLAMA_NOPRUNE=1                         # Never unload models
-OLLAMA_MAX_LOADED_MODELS=1               # Only one model at a time
-
-# User Management
-MAX_CHATS_PER_USER=1                     # Maximum chats per user
-MAX_PENDING_USERS=2                      # Maximum pending user registrations
-RATE_LIMIT_MESSAGES_PER_MINUTE=8         # Conservative rate limit for hybrid
-
-# Resource Limits - OPTIMIZED for Hybrid Processing
-OLLAMA_MEMORY=16G                        # Large RAM allocation for CPU layers
-OLLAMA_CPU=4                             # More CPU cores for hybrid processing
-REDIS_MEMORY=2G                          # RAM for Redis
-REDIS_CPU=1                              # CPU cores for Redis
-NGINX_MEMORY=1G                          # RAM for nginx
-NGINX_CPU=1                              # CPU cores for nginx
+MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters) - Corrected Hybrid Mode
 
 # =============================================================================
-# ⚡ OLLAMA PERFORMANCE PARAMETERS - HYBRID MODE
+# ⚡ CORRECTED OLLAMA SETTINGS - NO CONFLICTS
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_LOAD_TIMEOUT=30m                  # Longer timeout for hybrid loading
-OLLAMA_NUMA=0                            # Disable NUMA
-OLLAMA_MAIN_GPU=0                        # Primary GPU ID
+OLLAMA_LOAD_TIMEOUT=45m
 
-# Hybrid-specific settings
-OLLAMA_CPU_TARGET=85                     # Target 85% CPU usage for non-GPU layers
-OLLAMA_GPU_MEMORY_FRACTION=0.31          # ~7.5GB of 24GB (31%)
+# CORRECTED: Memory settings - NO CONFLICTS between server and model
+OLLAMA_MMAP=0                            # Server: DISABLED
+OLLAMA_MLOCK=1                           # Server: ENABLED
+MODEL_USE_MMAP=false                     # Model: DISABLED (matches server)
+MODEL_USE_MLOCK=true                     # Model: ENABLED (matches server)
+
+# Conservative hybrid settings
+OLLAMA_GPU_LAYERS=8                      # Conservative 6GB VRAM target
+OLLAMA_CONTEXT_SIZE=1024                 # Reduced for stability
+OLLAMA_BATCH_SIZE=64                     # Conservative batch size
+OLLAMA_NUM_THREAD=6                      # Stable threading
+
+# Resource management
+OLLAMA_KEEP_ALIVE=300                    # 5 minutes (allow recovery)
+OLLAMA_NOPRUNE=0                         # Allow pruning
+OLLAMA_MAX_LOADED_MODELS=1               # Single model
+
+# GPU settings
+OLLAMA_GPU_MEMORY_FRACTION=0.25          # 25% = 6GB target
+NVIDIA_VISIBLE_DEVICES=0
 
 # =============================================================================
-# 🎛️ MODEL PARAMETERS - HYBRID OPTIMIZED (FIXED)
+# 🎛️ MODEL PARAMETERS - CONSERVATIVE
 # =============================================================================
-MODEL_TEMPERATURE=0.7
+MODEL_TEMPERATURE=0.6
 MODEL_TOP_P=0.9
 MODEL_TOP_K=40
 MODEL_REPEAT_PENALTY=1.1
-MODEL_USE_MMAP=false                     # Disable for better control
-MODEL_USE_MLOCK=true                     # Enable memory locking (handled by server)
-MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
+MODEL_MAX_TOKENS=2048
+MODEL_TIMEOUT=300
 
 # =============================================================================
-# 📱 APPLICATION SETTINGS - HYBRID OPTIMIZED
+# 📱 APPLICATION SETTINGS
 # =============================================================================
-MODEL_MAX_TOKENS=3072                    # Good max tokens for hybrid
-MODEL_TIMEOUT=240                        # 4 minutes (hybrid needs more time)
-CHAT_HISTORY_LIMIT=12                    # Good history for context
-CHAT_CACHE_TTL_SECONDS=7200              # 2 hour cache
+CHAT_HISTORY_LIMIT=10
+RATE_LIMIT_MESSAGES_PER_MINUTE=6
+MAX_MESSAGE_LENGTH=4000
 
-# =============================================================================
-# 👥 USER VALIDATION SETTINGS
-# =============================================================================
+# User Management
+MAX_CHATS_PER_USER=1
+MAX_PENDING_USERS=2
 MIN_USERNAME_LENGTH=3
 MAX_USERNAME_LENGTH=14
 MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=128
-MAX_MESSAGE_LENGTH=6000                  # Slightly higher for hybrid
-MAX_FILENAME_LENGTH=255
-CSRF_TOKEN_LENGTH=32
 
 # =============================================================================
-# 🔒 RATE LIMITING SETTINGS
+# 🐳 DOCKER RESOURCES - CONSERVATIVE
 # =============================================================================
-RATE_LIMIT_WINDOW=60                     # Rate limit window in seconds
-USER_ID_COUNTER_START=1000               # Starting ID for regular users
+OLLAMA_MEMORY=12G
+OLLAMA_CPU=3
+REDIS_MEMORY=1G
+REDIS_CPU=1
+NGINX_MEMORY=512M
+NGINX_CPU=1
 
 # =============================================================================
-# 🖥️ NVIDIA GPU SETTINGS - HYBRID MODE
-# =============================================================================
-NVIDIA_VISIBLE_DEVICES=0
-CUDA_MEMORY_FRACTION=0.31                # 31% of 24GB = ~7.5GB
-LOG_LEVEL=INFO
-LOG_FORMAT=json
-
-# =============================================================================
-# 📦 REDIS CONFIGURATION
+# 📦 REDIS & TIMEOUTS
 # =============================================================================
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_URL=redis://redis:6379/0
-REDIS_MAX_CONNECTIONS=30                 # Max Redis connections
-REDIS_SOCKET_KEEPALIVE=true
-REDIS_RETRY_ON_TIMEOUT=true
-REDIS_DECODE_RESPONSES=true
+
+# Conservative timeouts
+UNLIMITED_TIMEOUT=600
+STREAMING_TIMEOUT=600
+MODEL_TIMEOUT=300
 
 # =============================================================================
-# ⏱️ TIMEOUT SETTINGS - HYBRID MODE (LONGER)
+# 📝 LOGGING
 # =============================================================================
-UNLIMITED_TIMEOUT=1200                   # 20 minutes for long operations
-STREAMING_TIMEOUT=1200                   # 20 minutes for streaming
-AIOHTTP_TOTAL_TIMEOUT=1200               # Total HTTP timeout
-AIOHTTP_CONNECT_TIMEOUT=90               # Connection timeout
-AIOHTTP_READ_TIMEOUT=1200                # Read timeout
-
-# =============================================================================
-# 🌐 CLIENT-SIDE CONFIGURATION
-# =============================================================================
-# These settings are used by the JavaScript application
-SESSION_LIFETIME_DAYS=7                  # Session lifetime in days
-SSE_HEARTBEAT_INTERVAL=30                # SSE heartbeat interval
-SSE_MAX_CONNECTIONS=5                    # Max SSE connections
-SSE_RETRY_TIMEOUT=8000                   # SSE retry timeout in ms (longer for hybrid)
+LOG_LEVEL=INFO
+LOG_FORMAT=json
