--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -111,6 +111,26 @@ http {
             }
         }
 
+        # Chat API endpoints
+        location ~ ^/api/chat/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local chat_api = require "chat_api"
+                chat_api.handle_chat_api()
+            }
+        }
+
         # Admin API endpoints
         location ~ ^/api/admin/ {
             add_header 'Access-Control-Allow-Origin' '*';
@@ -124,12 +144,10 @@ http {
                 return 204;
             }
             
+            lua_need_request_body on;
             content_by_lua_block {
-                local cjson = require "cjson"
-                ngx.status = 501
-                ngx.header.content_type = 'application/json'
-                ngx.say(cjson.encode({error = "Admin API not yet implemented"}))
-                ngx.exit(501)
+                local admin_api = require "admin_api"
+                admin_api.handle_admin_api()
             }
         }
 
