--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ ADMIN_USER_ID=admin
 # =============================================================================
 OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
-MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters) - Corrected Hybrid Mode
+#MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters) - Corrected Hybrid Mode
 
 # =============================================================================
 # ⚡ CORRECTED OLLAMA SETTINGS - NO CONFLICTS
@@ -33,10 +33,10 @@ MODEL_USE_MMAP=false                     # Model: DISABLED (matches server)
 MODEL_USE_MLOCK=true                     # Model: ENABLED (matches server)
 
 # Conservative hybrid settings
-OLLAMA_GPU_LAYERS=8                      # Conservative 6GB VRAM target
-OLLAMA_CONTEXT_SIZE=1024                 # Reduced for stability
-OLLAMA_BATCH_SIZE=64                     # Conservative batch size
-OLLAMA_NUM_THREAD=6                      # Stable threading
+OLLAMA_GPU_LAYERS=12                      # Conservative 6GB VRAM target
+OLLAMA_CONTEXT_SIZE=4096                 # Reduced for stability
+OLLAMA_BATCH_SIZE=256                     # Conservative batch size
+OLLAMA_NUM_THREAD=8                      # Stable threading
 
 # Resource management
 OLLAMA_KEEP_ALIVE=300                    # 5 minutes (allow recovery)
@@ -44,7 +44,7 @@ OLLAMA_NOPRUNE=0                         # Allow pruning
 OLLAMA_MAX_LOADED_MODELS=1               # Single model
 
 # GPU settings
-OLLAMA_GPU_MEMORY_FRACTION=0.25          # 25% = 6GB target
+OLLAMA_GPU_MEMORY_FRACTION=0.8          # 25% = 6GB target
 NVIDIA_VISIBLE_DEVICES=0
 
 # =============================================================================
@@ -61,8 +61,8 @@ MODEL_TIMEOUT=300
 # 📱 APPLICATION SETTINGS
 # =============================================================================
 CHAT_HISTORY_LIMIT=10
-RATE_LIMIT_MESSAGES_PER_MINUTE=6
-MAX_MESSAGE_LENGTH=4000
+RATE_LIMIT_MESSAGES_PER_MINUTE=8
+MAX_MESSAGE_LENGTH=10000
 
 # User Management
 MAX_CHATS_PER_USER=1
@@ -76,7 +76,7 @@ MAX_PASSWORD_LENGTH=128
 # 🐳 DOCKER RESOURCES - CONSERVATIVE
 # =============================================================================
 OLLAMA_MEMORY=12G
-OLLAMA_CPU=3
+OLLAMA_CPU=4
 REDIS_MEMORY=1G
 REDIS_CPU=1
 NGINX_MEMORY=512M
