--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,4 @@
+# nginx/nginx.conf - Updated with logout and streaming endpoints
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -26,7 +27,7 @@ http {
         listen 80;
         server_name localhost;
 
-        # Static files - Updated paths to match your directory structure
+        # Static files
         location /js/ {
             root /usr/local/openresty/nginx/html;
             expires 1y;
@@ -45,21 +46,19 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # Static files from the static directory (if any)
         location /static/ {
             root /usr/local/openresty/nginx/html;
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
 
-        # Favicon
         location = /favicon.ico {
             root /usr/local/openresty/nginx/html;
             log_not_found off;
             access_log off;
         }
 
-        # API endpoints
+        # Auth endpoints
         location = /api/auth/login {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -74,7 +73,6 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                ngx.req.read_body()
                 local auth = require "auth"
                 auth.handle_login()
             }
@@ -88,6 +86,25 @@ http {
             content_by_lua_block {
                 local auth = require "auth"
                 auth.handle_me()
+            }
+        }
+
+        # NEW: Logout endpoint
+        location = /api/auth/logout {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            content_by_lua_block {
+                local auth = require "auth"
+                auth.handle_logout()
             }
         }
 
@@ -105,13 +122,35 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                ngx.req.read_body()
                 local register = require "register"
                 register.handle_register()
             }
         }
 
-        # Chat API endpoints
+        # Chat API endpoints - Updated for streaming
+        location = /api/chat/stream {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            # Streaming specific headers
+            add_header 'Cache-Control' 'no-cache';
+            add_header 'Connection' 'keep-alive';
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local chat_api = require "chat_api"
+                chat_api.handle_chat_stream()
+            }
+        }
+
         location ~ ^/api/chat/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -166,7 +205,7 @@ http {
             }
         }
 
-        # Login & register pages (keep static)
+        # Static pages
         location = /login.html {
             try_files /login.html =404;
         }
@@ -175,7 +214,6 @@ http {
             try_files /register.html =404;
         }
 
-        # Static index
         location = / {
             try_files /index.html =404;
         }
