--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ ADMIN_USER_ID=admin
 # =============================================================================
 OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
-#MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters) - Corrected Hybrid Mode
+MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+CPU processing
 
 # =============================================================================
 # ⚡ CORRECTED OLLAMA SETTINGS - NO CONFLICTS
@@ -32,23 +32,23 @@ OLLAMA_MLOCK=1                           # Server: ENABLED
 MODEL_USE_MMAP=false                     # Model: DISABLED (matches server)
 MODEL_USE_MLOCK=true                     # Model: ENABLED (matches server)
 
-# Conservative hybrid settings
-OLLAMA_GPU_LAYERS=12                      # Conservative 6GB VRAM target
-OLLAMA_CONTEXT_SIZE=4096                 # Reduced for stability
-OLLAMA_BATCH_SIZE=256                     # Conservative batch size
-OLLAMA_NUM_THREAD=8                      # Stable threading
+# Enhanced hybrid settings
+OLLAMA_GPU_LAYERS=12                     # Enhanced GPU layers
+OLLAMA_CONTEXT_SIZE=4096                 # 4K context window
+OLLAMA_BATCH_SIZE=256                    # Large batch size
+OLLAMA_NUM_THREAD=8                      # 8 CPU threads
 
 # Resource management
 OLLAMA_KEEP_ALIVE=300                    # 5 minutes (allow recovery)
 OLLAMA_NOPRUNE=0                         # Allow pruning
 OLLAMA_MAX_LOADED_MODELS=1               # Single model
 
-# GPU settings
-OLLAMA_GPU_MEMORY_FRACTION=0.8          # 25% = 6GB target
-NVIDIA_VISIBLE_DEVICES=0
+# GPU settings - FIXED: Dynamic allocation
+# OLLAMA_GPU_MEMORY_FRACTION=0.8        # REMOVED - Dynamic allocation
+NVIDIA_VISIBLE_DEVICES=0                 # Use GPU 0
 
 # =============================================================================
-# 🎛️ MODEL PARAMETERS - CONSERVATIVE
+# 🎛️ MODEL PARAMETERS - ENHANCED
 # =============================================================================
 MODEL_TEMPERATURE=0.6
 MODEL_TOP_P=0.9
@@ -58,11 +58,11 @@ MODEL_MAX_TOKENS=2048
 MODEL_TIMEOUT=300
 
 # =============================================================================
-# 📱 APPLICATION SETTINGS
+# 📱 APPLICATION SETTINGS - ENHANCED
 # =============================================================================
 CHAT_HISTORY_LIMIT=10
-RATE_LIMIT_MESSAGES_PER_MINUTE=8
-MAX_MESSAGE_LENGTH=10000
+RATE_LIMIT_MESSAGES_PER_MINUTE=8         # Enhanced rate limit
+MAX_MESSAGE_LENGTH=10000                 # Larger messages
 
 # User Management
 MAX_CHATS_PER_USER=1
@@ -73,10 +73,10 @@ MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=128
 
 # =============================================================================
-# 🐳 DOCKER RESOURCES - CONSERVATIVE
+# 🐳 DOCKER RESOURCES - ENHANCED
 # =============================================================================
 OLLAMA_MEMORY=12G
-OLLAMA_CPU=4
+OLLAMA_CPU=4                             # Enhanced CPU allocation
 REDIS_MEMORY=1G
 REDIS_CPU=1
 NGINX_MEMORY=512M
