--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -194,14 +194,14 @@ http {
         location = /chat.html {
             content_by_lua_block {
                 local chat = require "chat"
-                chat.handle_chat_page()
+                chat.handle_chat()
             }
         }
 
         location = /admin.html {
             content_by_lua_block {
                 local admin = require "admin"
-                admin.handle_admin_page()
+                admin.handle_admin()
             }
         }
 
