--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Updated with logout and streaming endpoints
+# nginx/nginx.conf - Complete universal Lua routing
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -27,7 +27,7 @@ http {
         listen 80;
         server_name localhost;
 
-        # Static files
+        # STATIC ASSETS - No auth required
         location /js/ {
             root /usr/local/openresty/nginx/html;
             expires 1y;
@@ -58,7 +58,13 @@ http {
             access_log off;
         }
 
-        # Auth endpoints
+        location = /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
+        # AUTH API ROUTES
         location = /api/auth/login {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -71,25 +77,49 @@ http {
                 return 204;
             }
             
-            lua_need_request_body on;
+        # ALL HTML PAGES - Go through Lua authentication
+        location = / {
+            content_by_lua_block {
+                local unified_auth = require "unified_auth"
+                unified_auth.handle_public_page("index.html")
+            }
+        }
+
+        location = /login.html {
+            content_by_lua_block {
+                local unified_auth = require "unified_auth"
+                unified_auth.handle_public_page("login.html")
+            }
+        }
+
+        location = /register.html {
+            content_by_lua_block {
+                local unified_auth = require "unified_auth"
+                unified_auth.handle_public_page("register.html")
+            }
+        }
+
+        # CHAT PAGE - Special handling with guest limits
+        location = /chat.html {
+            content_by_lua_block {
+                local unified_auth = require "unified_auth"
+                unified_auth.handle_chat_page()
+            }
+        }
+
+        # ADMIN PAGE - Requires admin privileges
+        location = /admin.html {
+            content_by_lua_block {
+                local unified_auth = require "unified_auth"
+                unified_auth.handle_protected_page("admin.html", true)
+            }
+        }need_request_body on;
             content_by_lua_block {
                 local auth = require "auth"
                 auth.handle_login()
             }
         }
 
-        location = /api/auth/me {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-            
-            content_by_lua_block {
-                local auth = require "auth"
-                auth.handle_me()
-            }
-        }
-
-        # NEW: Logout endpoint
         location = /api/auth/logout {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
@@ -127,7 +157,7 @@ http {
             }
         }
 
-        # Chat API endpoints - Updated for streaming
+        # CHAT API ROUTES - Support both users and guests
         location = /api/chat/stream {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
@@ -140,7 +170,6 @@ http {
                 return 204;
             }
             
-            # Streaming specific headers
             add_header 'Cache-Control' 'no-cache';
             add_header 'Connection' 'keep-alive';
             
@@ -170,7 +199,7 @@ http {
             }
         }
 
-        # Admin API endpoints
+        # ADMIN API ROUTES - Registered users only
         location ~ ^/api/admin/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
@@ -183,58 +212,4 @@ http {
                 return 204;
             }
             
-            lua_need_request_body on;
-            content_by_lua_block {
-                local admin_api = require "admin_api"
-                admin_api.handle_admin_api()
-            }
-        }
-
-        # Dynamic pages
-        location = /chat.html {
-            content_by_lua_block {
-                local chat = require "chat"
-                chat.handle_chat()
-            }
-        }
-
-        location = /admin.html {
-            content_by_lua_block {
-                local admin = require "admin"
-                admin.handle_admin()
-            }
-        }
-
-        # Static pages
-        location = /login.html {
-            try_files /login.html =404;
-        }
-
-        location = /register.html {
-            try_files /register.html =404;
-        }
-
-        location = / {
-            try_files /index.html =404;
-        }
-
-        # Health check
-        location = /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # Error pages
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
-        
-        location = /404.html {
-            internal;
-        }
-        
-        location = /50x.html {
-            internal;
-        }
-    }
-}
+            lua_
