user dash, jwt checks are back for /api now too

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Complete universal Lua routing
+# nginx/nginx.conf - Complete universal Lua routing with JWT/Redis auth
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -64,11 +64,11 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # AUTH API ROUTES
+        # AUTH API ROUTES - No auth required (public endpoints)
         location = /api/auth/login {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -77,53 +77,28 @@ http {
                 return 204;
             }
             
-        # ALL HTML PAGES - Go through Lua authentication
-        location = / {
-            content_by_lua_block {
-                local unified_auth = require "unified_auth"
-                unified_auth.handle_public_page("index.html")
-            }
-        }
-
-        location = /login.html {
-            content_by_lua_block {
-                local unified_auth = require "unified_auth"
-                unified_auth.handle_public_page("login.html")
-            }
-        }
-
-        location = /register.html {
-            content_by_lua_block {
-                local unified_auth = require "unified_auth"
-                unified_auth.handle_public_page("register.html")
-            }
-        }
-
-        # CHAT PAGE - Special handling with guest limits
-        location = /chat.html {
-            content_by_lua_block {
-                local unified_auth = require "unified_auth"
-                unified_auth.handle_chat_page()
-            }
-        }
-
-        # ADMIN PAGE - Requires admin privileges
-        location = /admin.html {
-            content_by_lua_block {
-                local unified_auth = require "unified_auth"
-                unified_auth.handle_protected_page("admin.html", true)
-            }
-        }need_request_body on;
+            lua_need_request_body on;
             content_by_lua_block {
                 local auth = require "auth"
                 auth.handle_login()
             }
         }
 
+        location = /api/auth/me {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            content_by_lua_block {
+                local auth = require "auth"
+                auth.handle_me()
+            }
+        }
+
         location = /api/auth/logout {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -141,7 +116,7 @@ http {
         location = /api/register {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -157,11 +132,11 @@ http {
             }
         }
 
-        # CHAT API ROUTES - Support both users and guests
+        # CHAT API ROUTES - Use clean auth check
         location = /api/chat/stream {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -173,6 +148,11 @@ http {
             add_header 'Cache-Control' 'no-cache';
             add_header 'Connection' 'keep-alive';
             
+            access_by_lua_block {
+                local auth = require "auth"
+                auth.check_approved_user()
+            }
+            
             lua_need_request_body on;
             content_by_lua_block {
                 local chat_api = require "chat_api"
@@ -183,13 +163,18 @@ http {
         location ~ ^/api/chat/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Type' 'text/plain; charset=utf-8';
                 add_header 'Content-Length' 0;
                 return 204;
+            }
+            
+            access_by_lua_block {
+                local auth = require "auth"
+                auth.check_approved_user()
             }
             
             lua_need_request_body on;
@@ -199,11 +184,11 @@ http {
             }
         }
 
-        # ADMIN API ROUTES - Registered users only
+        # ADMIN API ROUTES - Use clean admin check
         location ~ ^/api/admin/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -212,4 +197,115 @@ http {
                 return 204;
             }
             
-            lua_
+            access_by_lua_block {
+                local auth = require "auth"
+                auth.check_admin_user()
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local admin_api = require "admin_api"
+                admin_api.handle_admin_api()
+            }
+        }
+
+        # USER API ROUTES - Use approved user check
+        location ~ ^/api/user/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            access_by_lua_block {
+                local auth = require "auth"
+                auth.check_approved_user()
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local user_api = require "user_api"
+                user_api.handle_user_api()
+            }
+        }
+
+        # HTML PAGES - Static public pages
+        location = / {
+            try_files /index.html =404;
+        }
+
+        location = /login.html {
+            try_files /login.html =404;
+        }
+
+        location = /register.html {
+            try_files /register.html =404;
+        }
+
+        # CHAT PAGE - Use existing module
+        location = /chat.html {
+            content_by_lua_block {
+                local chat = require "chat"
+                chat.handle_chat()
+            }
+        }
+
+        # ADMIN PAGE - Use existing module
+        location = /admin.html {
+            content_by_lua_block {
+                local admin = require "admin"
+                admin.handle_admin()
+            }
+        }
+
+        # USER DASHBOARD - Add auth check and template rendering
+        location = /dashboard.html {
+            content_by_lua_block {
+                local auth = require "auth"
+                local username, red = auth.check_approved_user()
+                
+                -- Load navigation template
+                local nav_html = ""
+                local nav_file = io.open("/usr/local/openresty/nginx/html/nav.html", "r")
+                if nav_file then
+                    nav_html = nav_file:read("*a")
+                    nav_file:close()
+                    nav_html = nav_html:gsub("{{username}}", username)
+                    nav_html = nav_html:gsub("{{admin_link}}", "")
+                end
+                
+                local template = require "template"
+                template.render_template("/usr/local/openresty/nginx/html/dashboard.html", {
+                    navigation = nav_html,
+                    username = username
+                })
+            }
+        }
+
+        # Error pages
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /50x.html;
+        
+        location = /404.html {
+            internal;
+        }
+        
+        location = /50x.html {
+            internal;
+        }
+
+        # Catch-all for any other routes
+        location / {
+            content_by_lua_block {
+                ngx.status = 404
+                ngx.header.content_type = "application/json"
+                ngx.say('{"error": "Not found"}')
+            }
+        }
+    }
+}
