--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Complete universal Lua routing with JWT/Redis auth
+# nginx/nginx.conf - Updated with guest chat support
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -132,7 +132,27 @@ http {
             }
         }
 
-        # CHAT API ROUTES - Use clean auth check
+        # GUEST API ROUTES - No auth required (creates sessions)
+        location ~ ^/api/guest/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local guest_api = require "guest_api"
+                guest_api.handle_guest_api()
+            }
+        }
+
+        # CHAT API ROUTES - Use unified auth (supports both users and guests)
         location = /api/chat/stream {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
@@ -149,8 +169,19 @@ http {
             add_header 'Connection' 'keep-alive';
             
             access_by_lua_block {
-                local auth = require "auth"
-                auth.check_approved_user()
+                local unified_auth = require "unified_auth"
+                local user_type, username, error_msg = unified_auth.check_user_access()
+                
+                if not user_type then
+                    ngx.status = 401
+                    ngx.header.content_type = 'application/json'
+                    ngx.say('{"error": "Authentication required", "message": "' .. (error_msg or "No valid session") .. '"}')
+                    ngx.exit(401)
+                end
+                
+                -- Store user info for use in content phase
+                ngx.var.auth_user_type = user_type
+                ngx.var.auth_username = username
             }
             
             lua_need_request_body on;
@@ -173,8 +204,19 @@ http {
             }
             
             access_by_lua_block {
-                local auth = require "auth"
-                auth.check_approved_user()
+                local unified_auth = require "unified_auth"
+                local user_type, username, error_msg = unified_auth.check_user_access()
+                
+                if not user_type then
+                    ngx.status = 401
+                    ngx.header.content_type = 'application/json'
+                    ngx.say('{"error": "Authentication required", "message": "' .. (error_msg or "No valid session") .. '"}')
+                    ngx.exit(401)
+                end
+                
+                -- Store user info for use in content phase
+                ngx.var.auth_user_type = user_type
+                ngx.var.auth_username = username
             }
             
             lua_need_request_body on;
@@ -204,8 +246,15 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local admin_api = require "admin_api"
-                admin_api.handle_admin_api()
+                local uri = ngx.var.uri
+                
+                if string.match(uri, "^/api/admin/sessions") then
+                    local admin_session_api = require "admin_session_api"
+                    admin_session_api.handle_session_api()
+                else
+                    local admin_api = require "admin_api"
+                    admin_api.handle_admin_api()
+                end
             }
         }
 
@@ -247,7 +296,7 @@ http {
             try_files /register.html =404;
         }
 
-        # CHAT PAGE - Use existing module
+        # CHAT PAGE - Use updated chat module with guest support
         location = /chat.html {
             content_by_lua_block {
                 local chat = require "chat"
